--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Me baby... Me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,29 +10,35 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Mat Denley</li>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="resume.html">Experience</a></li>
           <li><a href="#">Photos</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-    </div>
+     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/Shark.png" alt="Stolen from the Internet" class="profile-image">
+      <h1 class="tag name">Hello, I’m Mat.</h1>
+      <p class="tag location">My home is Louisville, Kentucky.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <h2 class="card-title">Background</h2>
+        <ul>
+          <li>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</li>
+          <li>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</li>
+           </ul>
+        <ul>
+          <li>To learn more, <a class="learn-more" href="resume.html">view my resume.</a></li>
+        </ul>
+        <h3>A New Subsection</h3>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
+        <h2 class="card-title">Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
@@ -47,11 +53,11 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
+        <li><a href="http://twitter.com/Smat8" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2015, Jane Smith</p>
     </footer>
   </body>
-  </html>
+</html>
